# tallerapp

./: .editorconfig  .env.example  .firebaserc  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  firebase.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.prod.txt  requirements.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v2/: router.py
backend/app/core/: config.py  exceptions.py  firebase.py  rbac.py  security.py  utils.py
backend/app/dependencies/: auth.py  permissions.py
backend/app/features/appointments/application/: use_cases.py  workflow_use_cases.py
backend/app/features/appointments/domain/: entities.py  workflow.py
backend/app/features/appointments/infrastructure/: appointment_repository.py
backend/app/features/appointments/presentation/: router.py  schemas.py
backend/app/features/auth/application/: use_cases.py
backend/app/features/auth/domain/: entities.py
backend/app/features/auth/infrastructure/: token_repository.py  user_repository.py
backend/app/features/auth/presentation/: router.py  schemas.py
backend/app/features/clients/domain/: entities.py
backend/app/middleware/: audit.py  rate_limit.py  security_headers.py
backend/app/schemas/: auth.py
backend/tests/: conftest.py  test_main.py
backend/tests/features/: test_appointments.py  test_auth.py  test_clients.py  test_estimates.py  test_inspections.py  test_pdf.py  test_qr.py  test_templates.py  test_tenants.py  test_users.py  test_vehicles.py  test_work_orders.py
(+163 files in other folders)
