[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tallerapp-backend"
version = "0.1.0"
description = "API backend para Taller Inspección"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.110.0,<1.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "firebase-admin>=6.4.0,<7.0.0",
    "PyJWT>=2.8.0,<3.0.0",
    "cryptography>=42.0.0,<44.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "qrcode[pil]>=7.4.2,<9.0.0",
]

[project.optional-dependencies]
pdf = [
    "weasyprint>=60.0,<63.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "ANN", "S", "B", "A"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
